--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
         <div class="content">
             <div class="search-box bg-theme rounded-m shadow-xl bottom-0">
                 <i class="fa fa-search"></i>
-                <input type="text" class="border-0" placeholder="What are you looking for? (try all) " data-search>
+                <input type="text" class="border-0" placeholder="Search LegitCar Shop." data-search>
             </div>   
             <div class="search-results disabled-search-list card card-style mx-0 mt-3 px-2">
                 <div class="list-group list-custom-large">
