--- a/public/menu-footer.html
+++ b/public/menu-footer.html
@@ -1,5 +1,5 @@
 <div class="card card-style mb-0">
-    <a href="#" class="footer-title pt-4">AZURES</a>
+    <a href="#" class="footer-title pt-4">LegitCar</a>
     <p class="text-center font-12 mt-n1 mb-3 opacity-70">
         Put a little <span class="color-highlight">color</span> in  your life
     </p>
